# SqliteSyncPro

./: CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  auth_superbase.py  createsuer_superbase.py  deleteuser_superbase.py  resetpasword_superbase.py  vcpkg.json
.claude/: settings.local.json
.qtcreator/: CMakeLists.txt.user.22de3e4
admin/: CMakeLists.txt  main.cpp
admin/backend/: AdminController.cpp  AdminController.h  ServerMode.h  SetupWorker.cpp  SetupWorker.h  TeardownWorker.cpp  TeardownWorker.h  UpgradeWorker.cpp  UpgradeWorker.h
admin/cmake/: BundleMacLibs.cmake
admin/icons/: sqlsyncadmin.icns  sqlsyncadmin.qrc  sqlsyncadmin.rc
admin/qml/pages/: UsersPage.qml
admin/ui/: MainWindow.cpp  MainWindow.h  WizardSidebar.cpp  WizardSidebar.h
admin/ui/pages/: ConfigurePage.cpp  ConfigurePage.h  ConnectionPage.cpp  ConnectionPage.h  InstallPage.cpp  InstallPage.h  SummaryPage.cpp  SummaryPage.h  TeardownPage.cpp  TeardownPage.h  UsersPage.cpp  UsersPage.h
examples/invoice/: CMakeLists.txt  InvoiceSettingsDialog.cpp  InvoiceSettingsDialog.h  MainWindow.cpp  MainWindow.h  main.cpp  postgres_schema.sql  postgrest.conf.example
examples/invoice/backend/: InvoiceController.cpp  InvoiceController.h
examples/invoice/qml/: MainForm.qml  main.qml
site/: 404.html  index.html
src/: CMakeLists.txt  authmanager.cpp  authmanager.h  httpclient.cpp  httpclient.h  rowencryption.cpp  rowencryption.h  schemainspector.cpp  schemainspector.h  sqlitesyncpro.cpp  sqlitesyncpro.h  syncapisettingsdialog.cpp  syncapisettingsdialog.h  syncapisettingsdialog.ui  syncconfig.h  syncengine.cpp  syncengine.h  synclog.cpp  synclog.h  syncloopworker.cpp  syncloopworker.h  syncresult.h  syncstatswindow.cpp  syncstatswindow.h  syncworker.cpp  syncworker.h
tests/: CMakeLists.txt  mockhttpclient.h  tst_authmanager.cpp  tst_schemainspector.cpp  tst_syncengine.cpp  tst_threading.cpp
